# web-server

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
app/include/: base64.h  config.h  defTypes.h  dictionary.h  file-process.h  hoel.h  iniparser.h  middleware.h  misc.h  system-request.h  system-status.h  web-server.h
app/src/: base64.c  config.c  dictionary.c  file-process.c  hoel-sqlite.c  hoel.c  iniparser.c  main.c  middleware.c  system-request.c  system-status.c  web-server.c  web_system_request.lua
